--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,294 @@
-.App {
-  text-align: center;
+* {
+  padding: 0%;
+  margin: 0%;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --white: #fff;
+  --black: #000;
+  --main: #ff6e68;
+  --lightBlack: #2c2c2c;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family: 'Open Sans', sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  width: 1300px;
+  margin: 0 auto;
+}
+
+.nav {
+  width: 100%;
+  height: 70px;
+  box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 0;
+  background-color: var(--white);
+  z-index: 1;
+}
+
+.nav__container {
   display: flex;
-  flex-direction: column;
+  height: 70px;
   align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.nav__left img {
+  width: 100px;
+}
+
+.Header {
+  background: url(/public/images/shop.jpg);
+  width: 100%;
+  height: 100vh;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.cart-icon {
+  color: var(--main);
+  font-size: 22px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.basket {
+  position: relative;
+}
+
+.basket span {
+  position: absolute;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  right: -16px;
+  top: -10px;
+  background: #1d8fc5;
+  border-radius: 50%;
+  height: 22px;
+  width: 22px;
+  font-size: 12px;
+  color: var(--white);
 }
 
-.App-link {
-  color: #61dafb;
+.row {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.col-3 {
+  width: 25%;
+}
+
+.product {
+  width: 100%;
+  padding: 25px;
+  overflow: hidden;
+}
+
+.product__img {
+  width: 100%;
+  height: 350px;
+  overflow: hidden;
+}
+
+.product__img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+  transition: all 0.5s linear;
+}
+
+.product__img img:hover {
+  transform: scale(1.4);
+}
+
+.product__name {
+  margin: 10px 0;
+  text-transform: capitalize;
+  color: #707070;
+}
+
+.col-6 {
+  width: 50%;
+}
+
+.product__discount__price {
+  text-align: end;
+  color: green;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.product__price .discount {
+  color: silver;
+  font-weight: 400;
+  font-size: 13px;
+  margin-left: 10px;
+  color: red;
+}
+
+.actual_price {
+  text-decoration: line-through;
+  font-size: 18px;
+}
+
+.mt-100 {
+  margin-top: 100px;
+}
+
+.details_images {
+  width: 80%;
+  height: auto;
+  padding-left: 30px;
+}
+
+.details_images img {
+  width: 80%;
+  height: auto;
+  margin-bottom: 25px;
+}
+
+.details_name {
+  font-weight: 600;
+  text-transform: capitalize;
+  color: var(--lightBlack);
+  font-size: 26px;
+  text-decoration: underline;
+}
+
+.details_actual {
+  text-decoration: line-through;
+  font-size: 20px;
+  color: rgb(107, 107, 5);
+  font-weight: 600;
+}
+
+.details_discount {
+  margin-left: 20px;
+  font-size: 20px;
+  color: green;
+  font-weight: 600;
+}
+
+.details_price {
+  margin: 20px 0px;
+}
+
+.dec,
+.inc,
+.quantity {
+  width: 60px;
+  height: 60px;
+  border: 1px solid silver;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.details__incdec {
+  display: flex;
+}
+
+.dec {
+  border-right: 0px;
+  font-size: 20px;
+  font-weight: 500;
+  color: red;
+}
+
+.inc {
+  border-left: 0px;
+  font-size: 20px;
+  font-weight: 500;
+  color: green;
+}
+
+.dec,
+.inc {
+  cursor: pointer;
+}
+
+.details_info {
+  margin: 20px 0px;
+}
+
+.btn_default {
+  width: 60%;
+  padding: 20px 0px;
+  font-size: 20px;
+  text-transform: uppercase;
+  background-color: var(--main);
+  color: var(--white);
+  border-style: none;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: all .5s linear;
+}
+
+.btn_default:hover {
+  background-color: #f79490;
+  color: #000;
+  transform: scale(1.01);
+}
+
+.custom_btn {
+  margin: 20px 0px;
+}
+
+.details_para {
+  font-size: 20px;
+  text-align: justify;
+  margin: 30px 0px;
+  /* padding-top: 20px; */
+}
+.new_h3{
+  margin-bottom: 10px;
+}
+.custom_back{
+  background: var(--main);
+    width: 16%;
+    text-align: center;
+    padding: 10px 0px;
+    border-radius: 3px;
+    margin: 13px 0px;
+    color: var(--white);
+}
+
+@media(max-width:765px) {
+  .container {
+    padding: 0 30px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .col-3 {
+    width: 50%;
+  }
+
+  .product__img img {
+    object-fit: contain;
+  }
+}
+
+@media(max-width:568px) {
+  .col-3 {
+    width: 100%;
+  }
+
+}
+
+@media(max-width:1334px) {
+  .container {
+    width: 100%;
   }
 }
