--- a/src/App.css
+++ b/src/App.css
@@ -195,6 +195,7 @@ a {
   justify-content: center;
   align-items: center;
   flex-direction: row;
+  font-size: 20px;
 }
 
 .details__incdec {
@@ -277,11 +278,38 @@ a {
 
 .custom_wel {
   box-shadow: 0px 0px 0px 23px #ffffff70;
-  font-size: 35px;
+  font-size: 25px;
   color: black;
   background: #c7bcbcd9;
   padding: 10px;
   border-radius: 5px;
+}
+
+@media(max-width:768px) {
+  .row {
+    flex-direction: column;
+  }
+
+  .col-6 {
+    width: 100%;
+  }
+
+  .custom_back {
+    width: 60%;
+  }
+
+  .details_images {
+    width: 100%;
+    padding-left: 0px;
+  }
+
+  .details_images img {
+    width: 100%;
+  }
+
+  .details_para {
+    padding-right: 10px;
+  }
 }
 
 @media(max-width:765px) {
@@ -308,5 +336,16 @@ a {
 @media(max-width:1334px) {
   .container {
     width: 100%;
+  }
+}
+
+@media(min-width:768px) {
+  .nav__container {
+    padding-right: 22px;
+    padding-left: 22px;
+  }
+
+  .details_para {
+    padding-right: 10px;
   }
 }
